--- a/docker/httpd/Dockerfile
+++ b/docker/httpd/Dockerfile
@@ -7,4 +7,4 @@ RUN yum -y --setopt=tsflags=nodocs update && \
     yum clean all
 RUN echo "Linux Container Web Server" > /var/www/html/index.html
 EXPOSE 80
-CMD ["/run-httpd.sh"]
+ENTRYPOINT ["/run-httpd.sh","-D","FOREGROUND"]
