--- a/docker/httpd/docker-compose.test.yml
+++ b/docker/httpd/docker-compose.test.yml
@@ -1,4 +1,4 @@
 sut:
     build: .
-    # Since started service with ENTRYPOINT, dockerhub autotest failed.
-    command: curl 127.0.0.1
+    # Started service with ENTRYPOINT, dockerhub autotest may fail
+    command: exec /usr/sbin/apachectl -DFOREGROUND; curl 127.0.0.1
