Fix, exec executable file not found in /home/sgao/.local/bin:/home/sgao/bin:/home/sgao/.local/bin:/home/sgao/bin:/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/sbin:/usr/local/go/bin:/usr/local/go/bin

--- a/docker/httpd/docker-compose.test.yml
+++ b/docker/httpd/docker-compose.test.yml
@@ -1,4 +1,4 @@
 sut:
     build: .
     # Started service with ENTRYPOINT, dockerhub autotest may fail
-    command: exec /usr/sbin/apachectl -DFOREGROUND; curl 127.0.0.1
+    command: /run-httpd.sh; curl 127.0.0.1
